@@ -1,3 +1,9 @@
+2003-10-20  David Hoover <karma@deadmoose.com>
+ 
+ 	* cong-file-save.c, cong-primary-window.c, global.h
+ 
+ 	Change the toolbar to give 'save' as an option instead of 'save as' 
+
 2003-10-20  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* cong-file-import.c
